k8s/backend/spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: spring-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.soytola.site
      secretName: api-tls
  rules:
    - host: api.soytola.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-service
                port:
                  number: 8080
